@@ -6,7 +6,8 @@ EXTRA_DIST = config.lsp \
 	ackermann.lsp \
 	closure.lsp \
 	symbol.lsp \
-	labirint.txt
+	labirint.txt \
+	static_types.lsp
 dist_DATA = $(EXTRA_DIST)
 distdir = $(pkgdatadir)
 
