@@ -1,4 +1,4 @@
 #!/bin/sh
 find -iname .*.swp | xargs rm
-gvim NEWS README ChangeLog src/*.h src/*.cpp src/gpstatic/*.cpp src/gpstatic/*.h src/libfunctions/*.cpp src/libfunctions/*.h src/vm/*.cpp src/vm/*.h
+gvim NEWS README ChangeLog src/*.h src/*.cpp src/libfunctions/*.cpp src/libfunctions/*.h src/vm/*.cpp src/vm/*.h
 
