@@ -1,2 +1,0 @@
-noinst_HEADERS = functions.h
-	types.h
